# Trixie

./: LICENSE  README.md  index.html  user_database.json
trixie/: .gitignore  CMakeLists.txt  CODE CONVETIONS.md  DECISIONS.md  TRIXIE_PROJECT_BRIEF.md  drawing_sequence.html  piano_ref.cpp  thinkboard.html  trixie_ui_architecture.md
trixie/.claude/: settings.local.json
trixie/src/: box.h  camera.h  editor.h  input_queue.cpp  input_queue.h  journal.cpp  journal.h  main.cpp  midi_loader.cpp  midi_loader.h  midi_out_plugin.cpp  midi_out_plugin.h  note.h  note_commands.h  note_hit.h  panel.h  piano_roll.cpp  piano_roll.h  piano_roll_ops.cpp  piano_roll_ops.h  piano_roll_space.h  piano_roll_view.h  playback_engine.cpp  playback_engine.h  plugin.h  render.cpp  render.h  song.h  theme.h  toolbar.cpp  toolbar.h  viewport.h  viewport_old.h  window.cpp  window.h  wm.cpp  wm.h
